# crypto

./: .gitattributes  .gitignore  .log.txt  CHANGELOG.md  README.md  basic.c  makefile  readme.md  t1.c
bench/bn/: bench_bn.cpp  guide.md  makefile
exp/影响时间测量的因素探究/: exp1.cpp  makefile
include/: basic.h
log/: log.txt
miscellaneous/Makefile/: note.md  readme.md
miscellaneous/asm_template/: t1.c  t1.s  template1.s
miscellaneous/avx2-examples/: .log.txt  t1.c
miscellaneous/cryptography/: demo1.py  readme.md
miscellaneous/gas/: note.md
miscellaneous/inline_assembly/: test1.c
miscellaneous/jupyter/: util.md
miscellaneous/mersen_reduction/: log.md  makefile  mersen_op.py  readme.md  step1.ipynb  step1.py  step2.ipynb  t1.py  util.md
miscellaneous/openssl/: readme.md
miscellaneous/openssl_cli/: readme.md
miscellaneous/openssl源码探索/: OPENSSL_ia32cap_P变量.md
miscellaneous/plot/: Untitled.ipynb  readme.md  t1.py
miscellaneous/py-ecdsa/: cal_time.py  ecdsa.py
nlog/: 20220728-点乘实验结果.xlsx  c语言注意事项.md  log.md  mont_ladder实现.xmind  note.md  pf_arith_avx2代码结构.xmind  pf_arith讲解.xmind  readme.xmind  simu_mul代码结构.xmind  点乘实现.xmind
note/: c语言注意事项.md  进度.md
pf_arith/: mont_mul.xmind  pf_arith.xmind
src/: basic.c
test/: .log.txt  CMakeLists.txt  log.md  t1.c  t2.c  t3.c
test/t1/: t1.c  (+3 more)
test/test_openssl/: CMakeLists.txt  convert_test.c  test1.c
tmp/: gdb_mulavx2_test.py  log.txt  t1.asm  t1.c  t1.html  t1.ipynb  t1.md  t1.s  t1.sage  t1.sh  use-sage.ipynb
util/: mm256op.c  mm256op.h  set_env.sh  show_mm256.c  show_mm256.h  test_mm256op.py  util.md
(+138 files in other folders)
